<resources>
    <string name="app_name">Ben\'s Portfolio App</string>

    <string name="action_settings">Settings</string>
    <string name="spotifyStreamer">SPOTIFY STREAMER</string>
    <string name="scoresApp">SCORES APP</string>
    <string name="libraryApp">LIBRARY APP</string>
    <string name="buildItBigger">BUILD IT BIGGER</string>
    <string name="XYZApp">XYZ READER</string>
    <string name="capstone">CAPSTONE</string>
    <string name="header">My Nanodegree Apps!</string>
</resources>
