<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:text="@string/header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#212121" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="42dp">

        <Button
            android:id="@+id/spotifyStreamer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/udacityOrange"
            android:minWidth="180dp"
            android:onClick="launchSpotifyStreamer"
            android:text="@string/spotifyStreamer"
            android:textColor="#212121" />

        <Button
            android:id="@+id/scoresApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/udacityOrange"
            android:minWidth="180dp"
            android:onClick="launchScoresApp"
            android:text="@string/scoresApp"
            android:textColor="#212121" />

        <Button
            android:id="@+id/libraryApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/udacityOrange"
            android:minWidth="180dp"
            android:onClick="launchLibraryApp"
            android:text="@string/libraryApp"
            android:textColor="#212121" />

        <Button
            android:id="@+id/buildItBigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/udacityOrange"
            android:minWidth="180dp"
            android:onClick="launchBuildItBigger"
            android:text="@string/buildItBigger"
            android:textColor="#212121" />

        <Button
            android:id="@+id/XYZApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/udacityOrange"
            android:minWidth="180dp"
            android:onClick="launchXYZReader"
            android:text="@string/XYZApp"
            android:textColor="#212121" />

        <Button
            android:id="@+id/capstone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/primary"
            android:minWidth="180dp"
            android:onClick="launchCapstone"
            android:text="@string/capstone"
            android:textColor="#212121" />
    </LinearLayout>

</RelativeLayout>
